# poopoo

./: .gitignore  .npmrc  Cargo.toml  LICENSE  README.md  finder.sh  justfile  package-lock.json  package.json  pyproject.toml  rustfmt.toml  show-toolchains.sh
 /: index.d.ts  index.node
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: enhancement.md  maintenance.md  problem.md  question.md
.github/PULL_REQUEST_TEMPLATE/: enhancement.md  maintenance.md  problem.md
.github/workflows/: ci-poodio.yml  ci.yml  pages.yml
_site/: poodio.sh
_site/poodio/: install.sh
docs/: CNAME
docs/poodio/: install.sh
poodio/: .gitignore  Cargo.toml  README.md  bindgen.rs  build.js  build.rs  justfile  package.json  pyproject.toml
poodio/.cargo/: config.toml
poodio/lib/rust/: cli.rs  mod.rs
poodio/src/: cli.rs  err.rs  lib.rs  main.rs
poodio/src/node/: index.cjs  loader.cjs  poodio  poodio.cjs
poodio/src/rust/: bin.rs  cli.rs  lib.rs
poodio/test/e2e/npm/: index.cjs  package.json  test.cjs
