[workspace]
members = ["poodio"]
resolver = "2"

[workspace.package]
edition = "2021"
license-file = "LICENSE"
metadata.binstall.pkg-url = "{ repo }/releases/download/{ name }%40v{ version }/{ name }-{ target }"
repository = "https://github.com/AsherJingkongChen/poopoo"
readme = true

[profile.release]
debug = false
lto = true
opt-level = "s"
panic = "abort"
strip = true
