[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "s"
panic = "abort"
strip = true

[workspace]
members = ["poodio"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/AsherJingkongChen/poopoo"
authors = ["AsherJingkongChen"]

[workspace.dependencies]
color-eyre = {version = "0.6.3", default-features = false}
cpal = {version = "0.15.3", default-features = false}
napi = {version = "2.16.16", default-features = false}
napi-build = {version = "2.1.5", default-features = true}
napi-derive = {version = "2.16.13", default-features = true}
package-json = {version = "0.5.0", default-features = false}
serde = {version = "1.0.219", default-features = false}
serde_json = {version = "1.0.140", default-features = false}