[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=75.0"]

[dependency-groups]
dev = ["maturin", "pip-audit", "ruff"]

[project]
dynamic = ["version"]
name = "workspace"
requires-python = ">=3.9"

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = ["poodio"]
