[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=75.0"]

[dependency-groups]
dev = ["maturin", "pip-audit", "ruff"]

[project]
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version"]
name = "workspace"

[tool.setuptools]
packages = []

[tool.uv.workspace]
members = ["poodio"]
