[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools >= 75.0"]

[dependency-groups]
dev = [
  'maturin[zig]; sys_platform == "linux"',
  'maturin; sys_platform != "linux"',
  "pip-audit",
  "ruff",
]

[project]
classifiers = ["Private :: Do Not Upload"]
dynamic = ["version"]
name = "workspace"

[tool.setuptools]
packages = []

[tool.uv]
required-version = ">= 0.6"
trusted-publishing = "always"
workspace.members = ["poodio"]
