[build-dependencies]
color-eyre.workspace = true
napi-build.workspace = true
package-json.workspace = true
serde.features = ["derive"]
serde.workspace = true
serde_json.workspace = true

[dependencies]
clap.features = ["default", "derive"]
clap.workspace = true
color-eyre.features = ["track-caller"]
color-eyre.workspace = true
cpal.workspace = true
log.workspace = true
napi-derive.features = ["type-def"]
napi-derive.workspace = true
napi.features = ["dyn-symbols"]
napi.workspace = true
simple_logger.features = ["colors", "stderr"]
simple_logger.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
name = "poodio"
path = "src/rust/lib.rs"

[[bin]]
name = "poodio"
path = "src/rust/bin.rs"

[package]
authors.workspace = true
categories = ["command-line-utilities", "multimedia::audio", "simulation"]
description = "💩 💨 Farts poo poo audio 💨 💩"
edition.workspace = true
homepage = "https://github.com/AsherJingkongChen/poopoo/tree/main/poodio#readme"
include = ["/build.rs", "/src/rust", "/LICENSE.txt"]
keywords = ["api", "audio", "cli", "llm", "server"]
license.workspace = true
name = "poodio"
readme = "README.md"
repository.workspace = true
rust-version = "1.80"
version = "0.0.13"

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/{ name }%40{ version }/{ name }%40{ version }-{ target }{ archive-suffix }"
