[build-dependencies]
color-eyre = {workspace = true, features = ["track-caller"]}
napi-build = {workspace = true, features = []}
# pyo3-build-config = {workspace = true, features = []}
serde = {workspace = true, features = ["std"]}
serde_json = {workspace = true, features = ["std"]}

[dependencies]
anstream = {workspace = true, features = ["auto"]}
clap = {workspace = true, features = ["default", "derive"]}
color-eyre = {workspace = true, features = ["track-caller"]}
cpal = {workspace = true, features = []}
log = {workspace = true, features = ["std"]}
napi = {workspace = true, features = ["dyn-symbols"]}
napi-derive = {workspace = true, features = ["type-def"]}
# pyo3 = {workspace = true, features = ["macros"]}
# pyo3-stub-gen = {workspace = true, features = []}
simple_logger = {workspace = true, features = ["colors", "stderr"]}

[lib]
crate-type = ["cdylib", "rlib"]

[package]
authors.workspace = true
categories = ["api-bindings", "command-line-utilities", "multimedia::audio", "simulation"]
description = "💩 💨 Farts poo poo audio 💨 💩"
edition.workspace = true
homepage = "https://github.com/AsherJingkongChen/poopoo/tree/main/poodio#readme"
include = ["/LICENSE.txt", "/build.rs", "/src/"]
keywords = ["api", "audio", "cli", "llm", "server"]
license.workspace = true
name = "poodio"
readme = "README.md"
repository.workspace = true
rust-version = "1.80"
version = "0.0.16"

[package.metadata.binstall]
pkg-fmt = "tgz"
pkg-url = "{ repo }/releases/download/{ name }%40{ version }/{ name }%40{ version }-{ target }{ archive-suffix }"
